--- a/assets/sass/molecules/_secondary-nav.scss
+++ b/assets/sass/molecules/_secondary-nav.scss
@@ -36,20 +36,18 @@
     color: $brand-primary;
   }
 
-  .links {
-    li {
-      padding: 8px $grid-gutter-width / 1.5;
+  .linksli {
+    padding: 8px $grid-gutter-width / 1.5;
+
+    a.pretty-link {
+      @include pretty-link($text-color, $white, $link-color);
+    }
+
+    &.active {
+      background-color: $brand-primary;
 
       a.pretty-link {
-        @include pretty-link($text-color, $white, $link-color);
-      }
-
-      &.active {
-        background-color: $brand-primary;
-
-        a.pretty-link {
-          @include pretty-link($white, $brand-primary, $white);
-        }
+        @include pretty-link($white, $brand-primary, $white);
       }
     }
   }
